# AutoCar

./: AutoCar.pro  CMakeLists.txt  Canvas.cpp  Canvas.h  README.md  Readme.doc  Readme_GA.doc  Readme_PSO.doc  automobi.desktop  mainwindow.h  mainwindow.ui  ui_mainwindow.h
plot/: PSO.json  plot.py
src/: .Canvas.h.swp  .mainwindow.ui.swp  AutoMobiController.cpp  AutoMobiController.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Car.cpp  Car.h  Wall.cpp  Wall.h  constants.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/Fuzzy/: .Fuzzy.cpp.swp  Fuzzy.cpp  Fuzzy.h  Rule.cpp  Rule.h
src/Fuzzy/MF/: .Left_steer.cpp.swp  .Long_dist.cpp.swp  .Short_dist.cpp.swp  .Slight_Left_offset.cpp.swp  .Slight_Right_offset.cpp.swp  Left_offset.cpp  Left_offset.h  Left_steer.cpp  Left_steer.h  Long_dist.cpp  Long_dist.h  Membership_func.h  None_offset.cpp  None_offset.h  Right_offset.cpp  Right_offset.h  Right_steer.cpp  Right_steer.h  Short_dist.cpp  Short_dist.h  Slight_Left_offset.cpp  Slight_Left_offset.h  Slight_Left_steer.cpp  Slight_Left_steer.h  Slight_Long_dist.cpp  Slight_Long_dist.h  Slight_Right_offset.cpp  Slight_Right_offset.h  Slight_Right_steer.cpp  Slight_Right_steer.h  Slight_Short_dist.cpp  Slight_Short_dist.h
src/GA/: GA.cpp  GA.h
src/GA/train/raw/: AutoCarData.rar
src/PSO/: PSO.cpp  PSO.h
